--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/stack": "^6.0.1",
     "expo": "~42.0.0",
