--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.14.7",
     "expo": "~42.0.0",
     "expo-constants": "^11.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
